# Wordline

./: .dockerignore  docker-compose.yml  entrypoint.sh  mise.toml  package.json  turbo.json
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/wordline/: __init__.py  main.py  rooms.py
backend/src/wordline/health/: __init__.py  get_health.py
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/components/: GameBoard.tsx  Keyboard.tsx  LanguageSwitcher.tsx  NeonBox.tsx  NeonButton.tsx  PlayerBoard.tsx  Sidebar.tsx
frontend/src/constants/: config.ts
frontend/src/hooks/: useRoom.ts
frontend/src/locales/en/: translation.json
frontend/src/locales/pt/: translation.json
frontend/src/pages/: LandingPage.tsx  RoomPage.tsx
frontend/src/pages/landing/: Landing.tsx  LandingFooter.tsx  LandingHeader.tsx  LandingLobbyOption.tsx
