[project]
name = "wordline"
version = "0.1.0"
description = "Wordline game server"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "python-ulid>=2.3.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [ "E", "F", "I", "N", "W", "UP" ]
ignore = [ "E501" ]

[tool.fastapi]
reload = true
